# gm82dx9

./: .gitignore  BUILDING.txt  CMakeLists.txt  COMPILING.txt  Game Maker 8.2 DirectX 9.txt  LICENSE.txt  README.md  build.bat  desktop.ini  gm82dx8.c  gm82dx8.cpp  gm82dx8.ged  gm82dx8.gej  gm82dx8.gml  gm82dx8.h  gm82dx9.gej  help.txt  inject.cpp  johnny.cfg  readme.txt  shaders.cpp  shaders.h  surfaces.gml  transform.c  transform.cpp
.github/workflows/: cmake.yml
dll/: build.bat  gm82dx8.c
examples/: buffer to surface.gm81  point sprites.gm81  pot.g3z  separate alpha blend mode.gm81  simple effects.gm81  simple mirror example.gm81  specular lighting.gm81  sphere mapping.gm81  vertex buffers and instanced rendering.gm81  water example.gm81  wireframe example.gm81
examples/shaders/: displacement map.gm81  heightmap.gm81  premultiplied alpha.gm81  ps-hueshift.hlsl  ps-posterize.hlsl  ps-premul.hlsl  radial sorting.gm81  shadertoy.gm81  simple effects.gm81
examples/shaders/source/: displacement.hlsl  grayscale.hlsl  heightmap.hlsl  tint.hlsl
source/: bundles.gml  drawing.gml  gm82dx8.cpp  gm82dx8.gml  gm82dx8.h  gm82dx9.cpp  gm82dx9.gml  gm82dx9.h  gm_interface.cpp  inject.cpp  ps_default.hlsl  ps_pass.hlsl  shaders.cpp  shaders.gml  shaders.h  surfaces.gml  transform.cpp  vertex_buffers.cpp  vs_default.hlsl  vs_pass.hlsl  vsync.cpp
